<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anketa"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/question"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="3mm"
        android:text="@string/NameText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/DateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/question"
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingLeft="3mm"
        android:text="@string/DateText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <EditText
        android:id="@+id/TNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@drawable/question"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="3mm"
        android:text="@string/TNameText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <EditText
        android:id="@+id/SNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="@drawable/question"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="3mm"
        android:text="@string/SNameText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <EditText
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/question"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="3mm"
        android:text="@string/EmailText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:id="@+id/NextLayoutButton"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_write"
        android:onClick="ClickButton"
        android:text="Переход"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <Button
        android:id="@+id/WriteButton"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/bth_read"
        android:onClick="ClickButton1"
        android:text="Записать"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>